<resources>
    <string name="app_name">GiantBomb App</string>
    <string name="api_key"></string>
    <string name="format">json</string>
    <string name="sort">publish_date:desc</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="restype">ResType</string>
    <string name="go_to_browser">Go to browser</string>
    <string name="no_data_message">Something went wrong when retrieving data. API Key may have been restricted due to rate limiting</string>
    <string name="reviews">Reviews</string>
    <string name="wiki">Wiki</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="promos">Promos</string>
    <string name="header_image">Header Image</string>
    <string name="search_wiki">Search wiki....</string>
    <string name="no_search_data">No data was found for your search query</string>
    <string-array name="resource_types">
        <item>Accessories</item>
        <item>Characters</item>
        <item>Companies</item>
        <item>Concepts</item>
        <item>Franchises</item>
        <item>Games</item>
        <item>Game Ratings</item>
        <item>Genres</item>
        <item>Locations</item>
        <item>Objects</item>
        <item>People</item>
        <item>Platforms</item>
        <item>Rating Boards</item>
        <item>Regions</item>
        <item>Releases</item>
    </string-array>
</resources>
