<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
          android:icon="@drawable/search"
          android:title="@string/search"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|never"/>
    <item android:id="@+id/to_promos"
          android:title="@string/promos"
          android:orderInCategory="200"
          app:showAsAction="never"/>

    <item android:id="@+id/to_reviews"
          android:title="@string/reviews"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/settings"
          android:orderInCategory="400"
          app:showAsAction="never"/>
</menu>